Añadidos los alt de las imágenes

--- a/reservas.html
+++ b/reservas.html
@@ -17,7 +17,7 @@
 			<h2>Paso 1 Elige destino</h2>
 			<div id="opciones">
 				<div class="opcion">
-					<img src="img/Oslo.jpeg" alt="">
+					<img src="img/Oslo.jpeg" alt="Oslo">
 					<div class="option-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.
 					</div>
@@ -26,7 +26,7 @@
 
 				</div>
 				<div class="opcion">
-					<img src="img/lisboa.jpeg" alt="">
+					<img src="img/lisboa.jpeg" alt="Lisboa">
 					<div class="option-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.
 					</div>
@@ -35,7 +35,7 @@
 
 				</div>
 				<div class="opcion">
-					<img src="img/el_cairo.jpeg" alt="">
+					<img src="img/el_cairo.jpeg" alt="El Cairo">
 					<div class="option-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.
 					</div>
